fix: x-overflow ui bug

--- a/src/styles/base/index.css
+++ b/src/styles/base/index.css
@@ -17,6 +17,7 @@ main{
     padding: 0;
     border: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 nav{
